crates/plotnik-tests/tests/04-emit/bytecode/binding/multiple_errors_cascade.txt
Q = (function_declaraton
  nme: (identifer) @name
) @fn
------------------ DIAGNOSTICS -------------------
error: `function_declaraton` is not a valid node kind
 --> query.ptk:1:6
  |
1 | Q = (function_declaraton
  |      ^^^^^^^^^^^^^^^^^^^
  |
help: replace with `function_declaration`
  |
1 | Q = (function_declaration
  |                       +

error: `nme` is not a valid grammar field
 --> query.ptk:2:3
  |
2 |   nme: (identifer) @name
  |   ^^^
  |
help: replace with `name`
  |
2 |   name: (identifer) @name
  |    +

error: `identifer` is not a valid node kind
 --> query.ptk:2:9
  |
2 |   nme: (identifer) @name
  |         ^^^^^^^^^
  |
help: replace with `identifier`
  |
2 |   nme: (identifier) @name
  |                +
